# Hallpass-Hero

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: bump-version.yml  cmake-multi-platform.yml  codeql.yml
scripts/: compile-temp.sh
src/c/: _add_student.c  _bulk_data_loader.c  _create_roster.c  _manage_roster.c  _manage_student.c  _manage_student_db.c  _search.c  _settings.c  main.c
src/cpp/: db.cpp
src/db/: db.c  db.cpp
src/docs/help/: _help_create_new_roster.txt  _help_main_menu.txt  _help_manage_roster.txt  _help_settings.txt
src/help/: _help_main_menu.txt
src/lib/: utils.c  utils.cpp  utils.h  utils.hpp
src/lib/headers/: c_files.h  db.h  db.hh  db.hpp  main.h  utils.h  utils.hpp
src/lib/headers/c/: c_files.h
src/lib/headers/cpp/: cpp_files.hpp
src/lib/utils/: utils.c  utils.cpp  utils.py
src/lib/utils/python/: __init__.py  utils.py
src/python/: __init__.py  bulk_data_loader.py  settings.py  startup.py
